# SymmetryPlaneTools

./: .gitignore  CMakeLists.txt  README.md  SymmetryPlaneTools.s4ext  reload.py
SymmetryPlaneFromPoints/: CMakeLists.txt  SymmetryPlaneFromPoints.py  SymmetryPlaneFromPointsLogic.py
SymmetryPlaneFromPoints/Resources/UI/: SymmetryPlaneFromPoints.ui
SymmetryPlaneFromPoints/Testing/: CMakeLists.txt
SymmetryPlaneFromPoints/logic/: __init__.py  export.py  gonion.py  guide.py  mandible.py  plane.py  sheet.py  split.py  utils.py
