cmake_minimum_required(VERSION 3.16.3...3.19.7 FATAL_ERROR)
project(SymmetryPlaneTools)
set(EXTENSION_HOMEPAGE "https://github.com/doduc12306/SymmetryPlaneTools")
set(EXTENSION_CATEGORY "Utilities")
set(EXTENSION_CONTRIBUTORS "Do Nguyen Anh Duc")
set(EXTENSION_DESCRIPTION "Tools for creating symmetry planes from fiducial points in 3D Slicer")
set(EXTENSION_ICONURL "https://raw.githubusercontent.com/Slicer/Slicer/main/Applications/SlicerApp/Resources/Icons/Slicer.svg")
set(EXTENSION_SCREENSHOTURLS "")
set(EXTENSION_DEPENDS "NA")
find_package(Slicer REQUIRED)
include(${Slicer_USE_FILE})
add_subdirectory(SymmetryPlaneFromPoints)
include(${Slicer_EXTENSION_GENERATE_CONFIG})
include(${Slicer_EXTENSION_CPACK})
