cmake_minimum_required(VERSION 3.13.4)
project(SymmetryPlaneTools)

# Standard Slicer extension metadata expected by Extension Wizard
set(EXTENSION_NAME "SymmetryPlaneTools")
set(EXTENSION_HOMEPAGE "https://github.com/doduc12306/SymmetryPlaneTools")
set(EXTENSION_CATEGORY "Utilities")
set(EXTENSION_CONTRIBUTORS "Do Nguyen Anh Duc")
set(EXTENSION_DESCRIPTION "Modular tools for symmetry planes, gonion landmark refinement, curved cutting sheet, mandible splitting, surgical guide generation, and STL export in 3D Slicer")
set(EXTENSION_ICONURL "https://raw.githubusercontent.com/Slicer/Slicer/main/Applications/SlicerApp/Resources/Icons/Slicer.svg")
set(EXTENSION_SCREENSHOTURLS "")
set(EXTENSION_DEPENDS "NA")
set(EXTENSION_BUILD_SUBDIRECTORY ".")
find_package(Slicer REQUIRED)
include(${Slicer_USE_FILE})
add_subdirectory(SymmetryPlaneFromPoints)
include(${Slicer_EXTENSION_GENERATE_CONFIG})
include(${Slicer_EXTENSION_CPACK})
